# substrate-node-template

./: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: contracts_config.rs  lib.rs
